// file: pkg/web/proto/requests/flush_cache_request.proto
// version: 1.0.0
// guid: mno78901-2345-6789-abcd-ef1234567890

edition = "2023";

package gcommon.v1.web;

import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/web/proto";

message FlushCacheRequest {
  // Optional namespace to flush (if empty, flushes all)
  string namespace = 1;

  // Request metadata for tracing
  gcommon.v1.common.RequestMetadata metadata = 2;
}
